# blastauri

./: Dockerfile  README.md  coverage.xml  pyproject.toml
action/: action.yml
docs/: architecture.md  ci-integration.md  configuration.md  github-setup.md  gitlab-setup.md  troubleshooting.md  waf-rules.md
src/blastauri/: __init__.py  __main__.py  cli.py  config.py  errors.py
src/blastauri/analysis/: __init__.py  ai_reviewer.py  api_diff.py  changelog_parser.py  fix_generator.py  heuristic_analyzer.py  impact_calculator.py  known_breaking_changes.py  package_metadata.py  reachability.py  static_analyzer.py  usage_finder.py  vulnerability_kb.py
src/blastauri/core/: __init__.py  models.py  safety.py  waf_orchestrator.py
src/blastauri/cve/: __init__.py  aggregator.py  cache.py  github_advisories.py  gitlab_advisories.py  nvd.py  osv.py  waf_patterns.py
src/blastauri/data/: vulnerable_functions.json
src/blastauri/git/: __init__.py  comment_generator.py  dependabot_parser.py  github_client.py  gitlab_client.py  label_manager.py  mr_analyzer.py  mr_creator.py  pr_analyzer.py  renovate_parser.py
src/blastauri/scanners/: __init__.py  base.py  cargo.py  composer.py  detector.py  go.py  maven.py  npm.py  pip.py  ruby.py
src/blastauri/templates/: __init__.py
src/blastauri/templates/comments/: __init__.py  waf_proposal.md.j2
src/blastauri/templates/waf/: __init__.py  aws_rule.tf.j2  aws_rule_group.tf.j2  aws_variables.tf.j2  aws_web_acl.tf.j2  cloudflare_ruleset.tf.j2  cloudflare_variables.tf.j2
src/blastauri/utils/: __init__.py  http.py  logging.py
src/blastauri/waf/: __init__.py  generator.py  lifecycle.py  rule_templates.py
src/blastauri/waf/providers/: __init__.py  aws.py  base.py  cloudflare.py
tests/: __init__.py  conftest.py
tests/docker/: test_docker_image.py  test_docker_scan.sh
tests/fixtures/api_responses/: github_pr_dependabot.json  github_pr_files.json  gitlab_mr_changes.json  gitlab_mr_renovate.json  npm_lodash_metadata.json  nvd_cve_log4j.json  osv_requests_vuln.json  pypi_requests_metadata.json
tests/fixtures/cve_responses/: github_response.json  nvd_response.json  osv_response.json
tests/fixtures/lockfiles/: go.mod  go.sum  package-lock.json  pnpm-lock.yaml  pom.xml  requirements.txt
tests/integration/: __init__.py  test_breaking_change_detection.py  test_cve_aggregation.py  test_full_pipeline.py  test_github_analysis.py  test_gitlab_analysis.py
tests/terraform/: test_terraform_validation.py
tests/transitive/: utils.py
tests/unit/: __init__.py  test_analysis.py  test_cli.py  test_config.py  test_cve.py  test_github.py  test_gitlab.py  test_models.py  test_mr_creator.py  test_reachability.py  test_scanners.py  test_static_analyzer.py  test_waf.py  test_waf_lifecycle.py  test_waf_orchestrator.py
tests/vulnerable_app/: safe.py  transitive_main.py  unsafe.js  unsafe.py
