[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastauri"
version = "0.1.0"
description = "Know what breaks before you merge. Analyzes Renovate/Dependabot MRs for breaking changes and manages WAF rules."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Clay Good", email = "hi@claygood.com" },
]
keywords = [
    "renovate",
    "dependabot",
    "dependency",
    "security",
    "waf",
    "breaking-changes",
    "gitlab",
    "github",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "python-gitlab>=4.4.0",
    "PyGithub>=2.1.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
blastauri = "blastauri.cli:app"

[project.urls]
Homepage = "https://github.com/clay-good/blastauri"
Repository = "https://github.com/clay-good/blastauri"
Documentation = "https://github.com/clay-good/blastauri#readme"
Issues = "https://github.com/clay-good/blastauri/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/blastauri"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | vendor
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip strict
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["blastauri"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
exclude = [
    "build",
    "dist",
    ".venv",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=blastauri",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=50",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest-asyncio]
mode = "auto"

[tool.coverage.run]
source = ["src/blastauri"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
